--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.8.1
-astroid==2.4.2
+astroid==3.2.2
+dill==0.3.8
 Django==5.0.6
 djangorestframework==3.15.1
-isort==4.3.21
-lazy-object-proxy==1.4.3
+Faker==25.2.0
+isort==5.13.2
+lazy-object-proxy==1.10.0
 Markdown==3.6
-mccabe==0.6.1
-pylint==2.5.3
+mccabe==0.7.0
+platformdirs==4.2.2
+pylint==3.2.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2020.1
-six==1.15.0
-sqlparse==0.3.1
-toml==0.10.1
+pytz==2024.1
+six==1.16.0
+sqlparse==0.5.0
+toml==0.10.2
+tomlkit==0.12.5
 validate-docbr==1.10.0
-wrapt==1.12.1
+wrapt==1.16.0
